# horibot

./: .gitignore  CLAUDE.md  README.md  npz_view.py
backend/: .gitignore  alembic.ini  api_contract.py  horibot.db  main.py  patch_ee_link_offset.py  pyproject.toml  test_zenoh.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_06_19_1238-e22c93e21053_initial_schema.py  2026_06_20_1734-c73c898d033a_initial_schema.py  236606bbc6f5_initial_schema.py
backend/apps/: config.py  contract_export.py  main.py  registry.py  resolve.py
backend/bridge/: calibration_router.py  client_stream.py  schemas.py  zenoh_bridge.py  zenoh_bridge_frame_drop.py
backend/config/: host_dev.yaml  host_mock.yaml  host_pc.yaml  host_pc_sim.yaml  host_pi_camera.yaml  host_pi_camera_sim.yaml  host_pi_motor.yaml  host_pi_motor_sim.yaml
backend/config/deployments/: mock.yaml  pc.yaml  pi_hori1.yaml  pi_hori2.yaml  pi_hori3.yaml  rnd.yaml  rnd_so101.yaml
backend/core/: base_node.py  common.py  frame_cache.py  gripper_setup.py  joint_coordinates.py  joint_offsets.py  joint_state_cache.py  link_coordinates.py  realsense_capture.py  robot_poses.py  robot_registry.py  sag_coordinates.py  tool_coordinates.py  topic_map.py  units.py  urdf_patcher.py  values.py  zenoh_session.py
backend/core/cache/: frame_cache.py  joint_state_cache.py
backend/core/coords/: joint_coordinates.py  link_coordinates.py  sag_coordinates.py  tool_coordinates.py  urdf_patcher.py
backend/core/messages/: base.py  camera.py  motor.py  system.py
backend/core/robot/: robot_poses.py  robot_registry.py
backend/core/transport/: application_node.py  base_node.py  device_node.py  node_registry.py  topic_map.py  zenoh_session.py
backend/framework/contract/: mirror.py  model.py  service.py
backend/framework/runtime/: api.py  app.py  discovery.py
backend/infra/database/: base.py  boot.py  postgres.py  types.py
backend/infra/logging/: publisher.py
backend/infra/ml/: __init__.py
backend/infra/object_store/: filesystem.py
backend/modules/bridge/: contract.py  dev_console.html  mjpeg.py  module.py  ws.py
backend/modules/calibration/: applier.py  backup.py  board.py  bundle_adjust.py  calibration_cache.py  capture_quality.py  coach.py  contract.py  hand_eye.py  intrinsic.py  joint_distribution.py  joint_offsets.py  link_offsets.py  loader.py  module.py  next_pose_planner.py  observability.py  observability_params.py  orm.py  persistence_models.py  result_models.py  sag_offsets.py  se3.py  sim_board.py  storage_client.py  thresholds.py  tool_offset.py
backend/modules/camera/: capture.py  decoded.py  depth_frame.py  factory_intrinsic.py  module.py  stream.py
backend/modules/detector/: __init__.py  contract.py  geometry.py  grounded_detector.py  module.py  projection.py  yolo_detector.py
backend/modules/dynamixel/: driver.py  motor_config.py
backend/modules/gamepad/: driver.py
backend/modules/host_monitor/: contract.py  module.py
backend/modules/kinematics/: corrected.py  fk_chain.py  iksolver.py  kinematics.py  motion_commands.py  motion_config.py  motion_modes.py  registry.py  solver.py  trajectory_runner.py
backend/modules/llm/: __init__.py  contract.py  prompt_parser.py
backend/modules/logcollector/: module.py
backend/modules/motion/: contract.py  fk_chain.py  kinematics.py  kinematics_builder.py  module.py  planner.py  sag_kinematics.py  trajectory_runner.py  urdf_patch.py
backend/modules/motion_preview/: contract.py  module.py
backend/modules/motor/: __init__.py  backend.py  contract.py  module.py  motor_config.py
backend/modules/pointcloud/: scan_capture.py  scan_io.py  tsdf_builder.py
backend/modules/reconstruction/: build.py
backend/modules/rnd_motion/: kinematics.py  module.py
backend/modules/scan/: blob.py  build.py  contract.py  isolated_build.py  module.py
backend/modules/scan_workflow/: blob.py  orm.py  persistence_models.py
backend/modules/scene3d/: consensus.py  contract.py  module.py  pointcloud.py
backend/modules/shared_config/: contract.py  module.py
backend/modules/storage/: __init__.py  factory.py  registry.py  transport.py
backend/modules/task/: contract.py  module.py  recipes.py  schema.py  spec.py  step.py  step_executor.py  step_types.py  steps.py  task_runner.py
backend/modules/waypoint/: contract.py  module.py
backend/nodes/: calibration_node.py  camera_node.py  camera_node_mock.py  detector_node.py  gamepad_node.py  motion_node.py  motor_node.py  motor_node_mock.py  pointcloud_node.py  task_node.py
backend/nodes/application/: calibration_node.py  detector_node.py  gamepad_node.py  pointcloud_node.py  reconstruction_node.py  scene3d_node.py  storage_node.py  task_node.py
backend/nodes/device/: camera_node.py  camera_node_mock.py  motion_node.py  motor_node.py  motor_node_mock.py
backend/scripts/: _backfill_effective_sigma.py  calibrate_diagnose.py  calibrate_effective_sigma.py  calibrate_offline.py  calibrate_push.py  calibrate_squeeze.py  compare_joint_prompt_scores.py  cross_calibrate.py  dump_calib_blob.py  gripper_characterize.py  handeye_compare_subsets.py  handeye_diagnose_current.py  handeye_irls_acceptance_sag.py  handeye_loocv_accuracy.py  migrate_bak_to_datetime.py  mock_scan_e2e.py  next_pose_audit.py  plan_search_poses.py  run_task.py  sim_smoke.py  teach_capture.py
backend/storage/: calib_loocv.json  horibot.db  horibot_bak.db
backend/tests/: conftest.py  test_backup.py  test_calibration_distributed_sim.py  test_calibration_e2e.py  test_capture_quality.py  test_fk_chain.py  test_gamepad.py  test_motion_e2e.py  test_motion_speed.py  test_observability_params.py  test_scan_blob.py  test_scene3d_refcount.py  test_storage_calibration_orm.py  test_storage_phase2.py  test_task_registry.py  test_tcp_state_publish.py
backend_v2/: .gitignore  alembic.ini  horibot.db  pyproject.toml
backend_v2/alembic/: env.py
backend_v2/apps/: config.py  contract_export.py  main.py  registry.py  resolve.py
backend_v2/config/: robots.yaml
backend_v2/scripts/: calibrate_offline.py  gen_contract.py  list_draft_contracts.py
(+886 files in other folders)
