[project]
name = "omx-control-backend"
version = "0.1.0"
description = "OMX Control Backend"
requires-python = ">=3.11"

dependencies = [
    "eclipse-zenoh>=1.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
]

pi-motor = [
    "dynamixel-sdk>=3.7.31",
    "pybullet>=3.2.0",
    "ruckig>=0.17.3",
    "scipy>=1.17.1",
]

pi-camera = [
    "pyrealsense2>=2.55.1",
    "opencv-python>=4.9.0",
    "zstandard>=0.22.0",
]

pc = [
    "opencv-python>=4.9.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "pybullet>=3.2.0",
    "scipy>=1.17.1",
    "ultralytics>=8.4.45",
    "open3d>=0.18.0",
    "pygame>=2.6.1",
    "zstandard>=0.22.0",
]

all = [
    {include-group = "pi-motor"},
    {include-group = "pi-camera"},
    {include-group = "pc"},
]

[tool.uv]
default-groups = ["dev", "all"]

[tool.ruff]
line-length = 88
target-version = "py311"
