[project]
name = "horibot-backend"
version = "0.1.0"
description = "Horibot Backend"
requires-python = ">=3.11"

dependencies = [
    "eclipse-zenoh>=1.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    # bridge `/system` endpoint — CPU / Mem 메트릭 (Dashboard overview).
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest>=8.0.0",
]

pi-motor = [
    "dynamixel-sdk>=3.7.31",
    # SO-101 (Feetech STS3215/3250). LeRobot 와 동일 pin.
    # 패키지 이름 ≠ import 이름: `import scservo_sdk`.
    "feetech-servo-sdk>=1.0.0,<2.0.0",
    "pybullet>=3.2.0",
    "ruckig>=0.17.3",
    "scipy>=1.17.1",
    # URDF parse — sag_corrected 의 FkChain (BA hot path 자체 numpy chain build,
    # parse 만 위임). camera Pi 는 fk_chain 사용 X 라 그룹 분리.
    "yourdfpy>=0.0.60",
]

pi-camera = [
    "pyrealsense2>=2.55.1",
    "opencv-python>=4.9.0",
    "zstandard>=0.22.0",
]

pc = [
    "opencv-python>=4.9.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "pybullet>=3.2.0",
    "scipy>=1.17.1",
    "ultralytics>=8.4.45",
    "open3d>=0.18.0",
    "pygame>=2.6.1",
    "zstandard>=0.22.0",
    # Grounding DINO Swin-B (open-vocabulary detection).
    # v5 는 AutoModelForZeroShotObjectDetection 제거 → 4.x 로 핀.
    # 4.57.x 는 dispatch_model 경로에서 meta tensor + .to(device) 가 깨짐
    # (NotImplementedError: Cannot copy out of meta tensor) — Qwen2.5 LLM 로드 실패.
    "transformers>=4.45.0,<4.57",
    "accelerate>=0.34.0",
    "pillow>=10.0.0",
    # URDF parse — BA 의 FkChain (calibration_node).
    "yourdfpy>=0.0.60",
    # CUDA 13 빌드 — host nvidia driver(13.2)와 매치. cu130 index 에서 받음
    # (tool.uv.sources 참고). transitive 의존성으로 끌려오면 source 매핑이
    # 안 먹어 CPU wheel 로 떨어지므로 명시적 pin.
    "torch==2.11.0",
    "torchvision==0.26.0",
]

all = [
    {include-group = "pi-motor"},
    {include-group = "pi-camera"},
    {include-group = "pc"},
]

[tool.uv]
default-groups = ["dev", "all"]

# PyTorch CUDA wheel — PyPI default 가 CPU 빌드를 주는 걸 피하려고 명시적 index.
# Pi 머신(pi-motor/pi-camera 그룹)은 torch 의존이 없어 이 source 영향 없음.
# cu130: CUDA 13 빌드. host 의 nvidia driver(13.2) 와 매치. RTX 3060 OK.
[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
