[project]
name = "horibot-backend"
version = "0.1.0"
description = "Horibot Backend v2 — framework (Runtime / Contract / Mirror / Transport)"
requires-python = ">=3.11"

dependencies = [
    "eclipse-zenoh>=1.0.0",
    "pydantic>=2.9.0",
    "msgspec>=0.18.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "psutil>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

# hori1 — so101 motor + motion
pi-hori1 = [
    "feetech-servo-sdk>=1.0.0,<2.0.0",
    "pybullet>=3.2",
    "ruckig>=0.9",
    "scipy>=1.11",
    "yourdfpy>=0.0.56",
    # 해석적 IK (docs/motion.md §11) — optional: import 실패 시 수치 폴백
    # (adapters/analytic.py). Pi(aarch64) wheel 부재 시 소스빌드가 필요할 수
    # 있음 — 설치 실패해도 부팅은 됨 (부팅 로그 "IK=수치" 로 모드 확인).
    "eaik>=1.2.2",
]

# hori2 — so101 D405 카메라
pi-hori2 = [
    "opencv-python-headless>=4.10.0,<5",
    "zstandard>=0.22.0",
    "pyrealsense2>=2.54",
]

# hori3 — omx_f (motor + motion + UVC 카메라)
pi-hori3 = [
    "dynamixel-sdk>=3.7.31",
    "pybullet>=3.2",
    "ruckig>=0.9",
    "scipy>=1.11",
    "yourdfpy>=0.0.56",
    "opencv-python-headless>=4.10.0,<5",
    "zstandard>=0.22.0",
]

# PC
pc = [
    "eaik>=1.2.2",  # 해석적 IK — pi-hori1 주석 참조
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
    "opencv-python-headless>=4.10.0,<5",
    "zstandard>=0.22.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "advanced-alchemy>=1.11.0",
    "open3d>=0.18",    
    "transformers>=5.0.0,<6",
    "accelerate>=0.34.0",
    "pillow>=10.0.0",    
    "torch==2.11.0",    
    "torchvision==0.26.0",
]

all = [
    { include-group = "pi-hori1" },
    { include-group = "pi-hori2" },
    { include-group = "pi-hori3" },
    { include-group = "pc" },
]
infra-postgres = [
    "psycopg[binary]>=3.2.0",
]
infra-minio = [
    "boto3>=1.34.0",
]

[tool.uv]
default-groups = ["dev", "all"]

# yourdfpy가 optional ray-tracing 의존성을 함께 설치하려고 한다.
# Pi(aarch64)에서는 wheel이 없어 sync가 실패하지만,
# FkChain은 load_meshes=False라 해당 기능을 사용하지 않는다.
# 따라서 never-true marker로 이 의존성을 모든 플랫폼에서 제외한다.
override-dependencies = ["embreex; sys_platform == 'never'"]

# Ruckig 0.17.3은 source 빌드만 지원한다.
# deprecated `cmake.targets` 때문에 scikit-build-core 1.0.0부터 빌드가 실패하므로,
# Ruckig가 수정될 때까지 scikit-build-core를 <1로 고정한다.
build-constraint-dependencies = ["scikit-build-core<1"]

# 기본 PyPI가 CPU 빌드를 선택하지 않도록 PyTorch CUDA wheel index를 명시한다.
# Pi 머신은 torch를 사용하지 않아 이 설정의 영향을 받지 않는다.
# cu130은 host NVIDIA 드라이버와 맞춘 CUDA 13 빌드이다.
[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py311"
# grasp_verify = object-centric 파지 재설계 sim 검증/프로토타입 (docs §10) — 프로덕션
# 아님, scratch 품질이라 lint 규칙 면제. 확정 설계·현재 코드는 docs/grasp_redesign_journey.md.
extend-exclude = ["scripts/grasp_verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "sim: 무거운 부팅 필요 (Runtime/실 Zenoh 세션/PyBullet/URDF/subprocess/모델 import) — 수 초/test. fast loop(-m 'not sim') 에서 skip, 실물 handoff 전 full 에서 실행",
]

[tool.pyright]
include = ["framework", "infra", "modules", "apps", "tests"]
pythonVersion = "3.11"
