[project]
name = "horibot-backend-v2"
version = "0.1.0"
description = "Horibot Backend v2 — framework (Runtime / Contract / Mirror / Transport)"
requires-python = ">=3.11"

# 공통 — 모든 process (wire framework + boot config). role 무관.
dependencies = [
    "eclipse-zenoh>=1.0.0",
    "pydantic>=2.9.0",
    "msgspec>=0.18.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
]

# 역할별 dependency group — config/deployments/{role}.yaml 과 1:1.
# Pi 는 자기 role 만: `uv sync --no-default-groups --group pi-camera`.
# dev 머신은 default-groups=[dev, all] 로 전부.
[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
# 모터 Pi — Dynamixel/Feetech SDK + kinematics. (pybullet / ruckig / scipy 는
# Motion Step D 진입 시.)
pi-motor = [
    "feetech-servo-sdk>=1.0.0,<2.0.0",  # SO-101 STS3215/3250. import: scservo_sdk
    "pybullet>=3.2",  # FK/IK (Motion). DIRECT mode, URDF load
    "ruckig>=0.9",  # jerk-limited trajectory (MoveJ/L/C/P)
    "scipy>=1.11",  # CubicSpline (MoveP) + 미래 SE(3)/sag
    "yourdfpy>=0.0.56",  # 해석적 FK (fk_chain) — sag decorator(Motion D4) + offline BA
]
# 카메라 Pi — pyrealsense2 는 Pi 소스빌드라 실 driver 때 추가
# (`--no-install-package pyrealsense2` + prebuilt wheel).
pi-camera = [
    "opencv-python-headless>=4.10.0",
    "zstandard>=0.22.0",
    "pyrealsense2>=2.54",  # D405. Pi 는 소스빌드 → --no-install-package pyrealsense2
]
# PC — bridge(web) + decode + DB owner + heavy compute.
pc = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
    "psutil>=6.0.0",
    "opencv-python-headless>=4.10.0",
    "zstandard>=0.22.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",  # 루트 단일 스키마 마이그레이션 (소유는 모듈, migration 은 루트)
    "advanced-alchemy>=1.11.0",  # 모듈 Repository 내부 CRUD ceremony 헬퍼 (framework 전제 X)
    "open3d>=0.18",  # Scene3D 라이브 PC + Reconstruction TSDF (ICP/PoseGraph/mesh)
    # Detector — Grounding DINO Swin-B (open-vocabulary detection).
    # v5 채택: v2 는 그린필드 재구축 → 옛 핀 답습이 아니라 현재 표준(transformers v5,
    # 2026-01 릴리스)을 밟는다. AutoModelForZeroShotObjectDetection 은 v5.12 에도
    # 존재(공식 문서 확인) — 옛 "v5 가 제거" 주석은 사실 오류였음.
    # 주의: v5.0.0 은 from_pretrained 기본 dtype=auto. 옛 backend 의 meta-tensor
    # ".to(device)" 깨짐(<4.57 회피)은 Qwen LLM(prompt_parser) tied-weight meta-init
    # 이슈였고, 그 LLM 은 NL PnP 로 v2 재등장 예정 → GDINO+Qwen 둘 다 이 transformers
    # 를 씀. 관건은 버전 핀이 아니라 로더(device_map/dtype 명시)로 fix. preload race
    # (llm_preload_race_debug.md)는 두 번째 소비자=Qwen 포팅 시점 프로토콜.
    "transformers>=5.0.0,<6",
    "accelerate>=0.34.0",
    "pillow>=10.0.0",
    # CUDA 13 빌드 — host nvidia driver 와 매치. cu130 index 에서 받음
    # (tool.uv.sources 참고). transitive 로 끌려오면 source 매핑이 안 먹어
    # CPU wheel 로 떨어지므로 명시적 pin (옛 backend 와 동일 판).
    "torch==2.11.0",
]
# 단일 머신 풀스택 (dev) — 세 role 합집합.
all = [
    { include-group = "pi-motor" },
    { include-group = "pi-camera" },
    { include-group = "pc" },
]
infra-postgres = [
    "psycopg[binary]>=3.2.0",
]
infra-minio = [
    "boto3>=1.34.0",
]

[tool.uv]
default-groups = ["dev", "all"]

# PyTorch CUDA wheel — PyPI default 가 CPU 빌드를 주는 걸 피하려고 명시적 index.
# Pi 머신(pi-motor/pi-camera 그룹)은 torch 의존이 없어 이 source 영향 없음.
# cu130: CUDA 13 빌드. host nvidia driver 와 매치 (옛 backend 와 동일).
[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# test 계층 분리 — 집(hardware O) 자리 fast feedback loop 확보.
#   pytest -m "not sim"  → fast (수 초, 관련 파일 수정 후 default)
#   pytest               → 전체 (회사 자리 / 큰 단위 완료 시)
#   pytest -m sim        → sim 만 pinpoint
markers = [
    "sim: Runtime/PyBullet/URDF boot 필요 — 수 초/test, 집 fast loop 에서 skip",
]

[tool.pyright]
include = ["framework", "infra", "modules", "apps", "tests"]
pythonVersion = "3.11"
